# paninij

./: .gitignore  .project  .travis.yml  README.md  RELEASING.md  allclasses-frame.html  build.gradle  example.html  index.html  installation.html  more.html  mvnw  pom.xml  settings.gradle
agent/: CMakeLists.txt  build.gradle
agent/include/at-paninij/: agent.h
agent/include/paninij/: agent.h
agent/itest/it0/: IT.java
agent/itest/it1/: IT.java  PingTemplate.java  PongTemplate.java  ServerTemplate.java
agent/itest/it2/: IT.java  PingTemplate.java  PongTemplate.java  ServerTemplate.java
agent/itest/it3/: IT.java  PingTemplate.java  PongTemplate.java  ReceiverTemplate.java  SenderTemplate.java  ServerTemplate.java
agent/itest/it4/: IT.java  PingTemplate.java  PongTemplate.java  ServerTemplate.java
agent/itest/it5/: ClientTemplate.java  IT.java  ServerTemplate.java
agent/itest/it6/: ClientTemplate.java  IT.java  ServerTemplate.java
agent/itest/org/paninij/agent/util/: Assert.java
agent/javah/: CMakeLists.txt
agent/src/at-paninij/: agent.cpp
agent/src/paninij/: agent.cpp
agent/test/: CMakeLists.txt  it.sh
agent/test/it1/: IT.java
agent/test/it2/: IT.java
analyses/: pom.xml
at-paninij-analyses/: pom.xml
at-paninij-analyses/at-paninij-soter/: pom.xml
at-paninij-analyses/at-paninij-soter-example/: pom.xml
at-paninij-analyses/at-paninij-soter-tests/: pom.xml
at-paninij-benchmarks/: README.md  pom.xml
at-paninij-benchmarks/at-paninij-benchmarks-harness/: pom.xml
at-paninij-benchmarks/at-paninij-benchmarks-jmh-harness/: pom.xml
at-paninij-benchmarks/at-paninij-benchmarks-savina/: hybrid-ownership-pom.xml  pom.xml  runtime-ownership-pom.xml
at-paninij-benchmarks/at-paninij-benchmarks-savina-harness/: pom.xml
at-paninij-code-gen/: pom.xml
at-paninij-core/: pom.xml
at-paninij-core/at-paninij-apt-tests/: pom.xml
at-paninij-core/at-paninij-code-gen/: pom.xml
at-paninij-core/at-paninij-proc/: .gitignore  pom.xml
at-paninij-core/at-paninij-proc-tests/: pom.xml
at-paninij-core/at-paninij-runtime/: pom.xml
at-paninij-core/at-paninij-soter-example/: pom.xml
at-paninij-core/at-paninij-soter-tests/: pom.xml
at-paninij-examples/: README.md  hybrid-ownership-pom.xml  pom.xml
at-paninij-runtime/: pom.xml
at-paninij-soter/: .gitignore  README.md  pom.xml
at-paninij-tests/: pom.xml
benchmarks/: README.md  pom.xml
capsule-generation/: .gitignore  pom.xml
code-gen/: pom.xml
core/: build.gradle
css/: main.css
examples/: .gitignore  build.gradle  pom.xml
index-files/: index-1.html  index-10.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-3.html  index-4.html  index-5.html  index-8.html  index-9.html
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list  serialized-form.html
runtime/: pom.xml
site/: build.gradle
tests/: pom.xml
(+2246 files in other folders)
